# data-self-organisation-vi

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  oneapi.sh
data/: 1and3.txt  README.md  almost.txt  almost2.txt  almost_3_done.txt  almost_three.txt  bastard.txt  blop.txt  blop2.txt  blop3.txt  blop4.txt  blop5.txt  blop6.txt  blop7.txt  blop8.txt  double1.txt  failed.txt  failed_test3.txt  failed_test4.txt  failed_test_me1.txt  mapping.txt  mewfile6.txt  new_two.txt  newfile10.txt  newfile3.txt  newfile4.txt  newfile7.txt  newfile9.txt  newfile_c.txt  outputs0.txt  outputs1.txt  outputs2.txt  run.txt  run12.txt  run3.txt  run5.txt  run6.txt  run7.txt  run8.txt  run9.txt  (+27 more)
data/old/: failed12.txt  newfile.txt  newfile3.txt  newfile8.txt  outputs0.txt  run1.txt  run10.txt  run13.txt  run3.txt  run4.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  trace.txt  (+1 more)
src/: CMakeLists.txt
src/include/: compute.h  data.h  dictionary.h  exceptions.h  general.h  input.h  kdpoint.h  output.h  parameters.h  point.h  population.h  position.h  program.h  region.h  results.h  schema.h  schemas.h  score.h  statistics.h  vector.h
src/include/genetic/: cache.h  collisions.h  insert.h  links.h  movement.h
src/include/genetic/templates/: genetic.h  serialiser.h
src/include/history/: stream.h  value.h
src/include/history/templates/: history.h
src/include/native/: programs.h
src/include/parallel/: collisions.hpp  device.hpp  dimension.hpp  inserts.hpp  links.hpp  parameters.hpp  program.hpp  queue.hpp  scale.hpp  value.hpp
src/include/parallel/map/: configuration.hpp  map.hpp
src/include/templates/: programs.h
src/source/: data.cpp  dictionary.cpp  exceptions.cpp  general.cpp  input.cpp  kdpoint.cpp  main.cpp  point.cpp  population.cpp  program.cpp  schema.cpp  schemas.cpp  score.cpp  vector.cpp
src/source/genetic/: cache.cpp  collisions.cpp  insert.cpp  links.cpp  movement.cpp
src/source/history/: stream.cpp  value.cpp
src/source/native/: programs.cpp
src/source/parallel/: collisions.cpp  device.cpp  inserts.cpp  links.cpp  program.cpp  queue.cpp
src/source/parallel/map/: configuration.cpp  map.cpp
test/: CMakeLists.txt
test/native/: bow.cpp  breeding.cpp  front.cpp  general.cpp  inserts.cpp  point.cpp  score.cpp  serialisation.cpp
test/parallel/: boundary.cpp  cache.cpp  general.cpp  inserts.cpp  links.cpp  poc.cpp  population.cpp  scale.cpp  stops.cpp  transfer.cpp
(+19 files in other folders)
